conssitat style on all htmls

--- a/static/Non_Preemptive_SJF.html
+++ b/static/Non_Preemptive_SJF.html
@@ -10,7 +10,7 @@
     <div id="header-container"></div>
 
     <div id="top">
-        <h2>Process List</h2>
+        <h2>Process List - SJF Non-Preemptive</h2>
         <button id="add-task">Add Task</button>
         <button id="simulate">Simulate</button>
         <div class="task-list" id="tasks">
