--- a/static/round_robin.html
+++ b/static/round_robin.html
@@ -11,7 +11,7 @@
     <div id="header-container"></div>
 
     <div id="top">
-        <h2>Process List</h2>
+        <h2>Process List - Round Robin</h2>
         <div id="time-quanta-input">
             <label for="time-quanta">Time Quanta: </label>
             <input type="number" id="time-quanta" value="4">
