--- a/static/FCFS.html
+++ b/static/FCFS.html
@@ -11,7 +11,7 @@
     <div id="header-container"></div>
 
     <div id="top">
-        <h2>Process List</h2>
+        <h2>Process List - FCFS</h2>
         <button id="add-task">Add Task</button>
         <button id="simulate">Simulate</button>
         <div class="task-list" id="tasks">
