--- a/static/Preemptive_SJF.html
+++ b/static/Preemptive_SJF.html
@@ -5,68 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preemptive SJF</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        #visualization {
-            display: flex;
-            margin-top: 20px;
-            height: 50px;
-            border: 1px solid #ccc;
-            position: relative;
-            background-color: #f9f9f9;
-        }
-        .task-interval {
-            height: 100%;
-            text-align: center;
-            line-height: 50px;
-            font-size: 12px;
-            overflow: hidden;
-            white-space: nowrap;
-            position: absolute;
-            border-right: 1px solid #000; /* Add a border to distinguish tasks */
-            background-color: #ffffff; /* Keep tasks white */
-            color: black;
-            box-sizing: border-box;
-        }
-
-        table {
-            width: 100%;
-            margin-top: 20px;
-            border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid #000000;
-            padding: 8px;
-            text-align: center;
-        }
-        th {
-            background-color: #3f3f3f;
-        }
-
-        #average-times {
-            margin-top: 20px;
-            font-size: 16px;
-        }
-        #average-times p {
-            margin: 5px 0;
-        }
-    </style>
 </head>
 <body>
     <div id="header-container"></div>
 
     <div id="top">
-        <h2>Task List</h2>
+        <h2>Process List - Preemptive SJF</h2>
+        <button id="add-task">Add Task</button>
+        <button id="simulate">Simulate</button>
         <div class="task-list" id="tasks">
             <!-- Task items will be dynamically added here -->
         </div>
-        <button id="add-task">Add Task</button>
-        <button id="simulate">Simulate</button>
     </div>
 
     <div id="bottom">
         <div id="bottom-top">
-            <h3>Bottom Top</h3>
-            <p>Content for the top part of the bottom section.</p>
             <h3>Timeline Visualization</h3>
             <div id="visualization">
                 <!-- Task intervals will be drawn here -->
@@ -74,20 +27,20 @@
         </div>
         <div id="bottom-bottom">
             <div>
-                <h3>Task Times</h3>
-            <table id="task-times">
-                <thead>
-                    <tr>
-                        <th>Task ID</th>
-                        <th>Wait Time</th>
-                        <th>Response Time</th>
-                        <th>Turnaround Time</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Task times will be dynamically added here -->
-                </tbody>
-            </table>
+                <h3>Process Times</h3>
+                <table id="task-times">
+                    <thead>
+                        <tr>
+                            <th>Task ID</th>
+                            <th>Wait Time</th>
+                            <th>Response Time</th>
+                            <th>Turnaround Time</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Task times will be dynamically added here -->
+                    </tbody>
+                </table>
             </div>
             <div>
                 <div id="average-times">
@@ -112,13 +65,14 @@
         // Function to add a new task
         addTaskButton.addEventListener("click", () => {
             const taskDiv = document.createElement("div");
-            taskDiv.className = "task";
+            taskDiv.className = "task-inputs"; // Consistent with other files
 
             // ID Input
             const idInput = document.createElement("input");
             idInput.type = "number";
             idInput.placeholder = "ID";
-            idInput.value = taskId++; // Auto-fill ID
+            idInput.value = taskId++;
+            idInput.readOnly = true; // Prevent editing of auto-generated IDs
 
             // Burst Time Input
             const burstTimeInput = document.createElement("input");
